--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: codingquark
-email: me@codingquark.com
+title: Codingquark
+email: quark@codingquark.com
 description: > # this means to ignore newlines until "baseurl:"
   My hacking adventures.
 baseurl: "" # the subpath of your site, e.g. /blog
