--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://codingquark.com" # the base hostname & protocol for your site
 github_username:  codingquark
+twitter_username: codingquark
 
 # Build settings
 markdown: kramdown
