--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,8 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://codingquark.com" # the base hostname & protocol for your site
 github_username:  codingquark
 twitter_username: codingquark
+mastodon_username: codingquark
+mastodon_profile: https://mathstodon.xyz/@codingquark
 
 # Build settings
 markdown: kramdown
