Proper Atom feed using a plugin

--- a/_config.yml
+++ b/_config.yml
@@ -19,3 +19,7 @@ mastodon_profile: https://mathstodon.xyz/@codingquark
 
 # Build settings
 markdown: kramdown
+
+# Feed settings
+plugins:
+  - jekyll-feed
