Old email address is dead, update to new one

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site settings
 title: Codingquark
-email: quark@codingquark.com
+email: dhavan@hey.com
 description: > # this means to ignore newlines until "baseurl:"
   My hacking adventures
 baseurl: "" # the subpath of your site, e.g. /blog
